--- a/version.hpp.in
+++ b/version.hpp.in
@@ -8,6 +8,6 @@
 #define V_REVISION @V_REVISION@
 
 #define PROJECT_VERSION \
-  V_MAJOR##.##V_MINOR##.##V_PATCH##.##V_REISION
+  V_MAJOR##.##V_MINOR##.##V_PATCH##.##V_REVISION
 
 #endif
