--- a/chalkboard/CMakeLists.txt
+++ b/chalkboard/CMakeLists.txt
@@ -1,17 +1,22 @@
 set(TARGET_NAME chalkboard)
 
-
 add_library(${TARGET_NAME} SHARED
         main.cpp
-        overlay/overlay.cpp
-        logger/logger.cpp
+        utility/event/event.cpp
+        overlay/hook/hook.cpp
+        overlay/draw/draw.cpp
+        overlay/utility/utility.cpp
+        utility/logger/logger.cpp
+        utility/input/input.cpp
+        core/core.cpp
 )
 sign_executable(${TARGET_NAME})
 # add_library(${TARGET_NAME} STATIC ${SOURCES})
 
 # link_directories(${LIB_DIR})
 
-# include_directories(${INCLUDE_DIR})
+#include_directories(${INCLUDE_DIR})
+target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(${TARGET_NAME} PRIVATE imgui)
 target_compile_options(${TARGET_NAME} PRIVATE /wd4005)
