--- a/version.hpp.in
+++ b/version.hpp.in
@@ -1,13 +1,18 @@
 #ifndef PROJECT_VERSION_HPP
 #define PROJECT_VERSION_HPP
 
-
 #define V_MAJOR @V_MAJ0R@
 #define V_MINOR @V_MINOR@
 #define V_PATCH @V_PATCH@
 #define V_REVISION @V_REVISION@
 
+#define STRINGIFY_(x) #x
+#define STRINGIFY(x) STRINGIFY_(x)
+
 #define PROJECT_VERSION \
   V_MAJOR##.##V_MINOR##.##V_PATCH##.##V_REVISION
+
+#define PROJECT_VERSION_STR \
+STRINGIFY(V_MAJOR) "." STRINGIFY(V_MINOR) "." STRINGIFY(V_PATCH) "." STRINGIFY(V_REVISION)
 
 #endif
