Added cpr and json as CMake fetch content, changed root CMakeLists.txt to accomodate compilation

--- a/imgui/CMakeLists.txt
+++ b/imgui/CMakeLists.txt
@@ -8,4 +8,4 @@ add_library(imgui STATIC
         imgui_impl_win32.cpp
 )
 
-target_include_directories(imgui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(imgui PUBLIC .)
