--- a/imgui/CMakeLists.txt
+++ b/imgui/CMakeLists.txt
@@ -8,4 +8,6 @@ add_library(imgui STATIC
         imgui_impl_win32.cpp
 )
 
+add_executable(binary_to_compressed_c binary_to_compressed_c.cpp)
+
 target_include_directories(imgui PUBLIC .)
