Added readme and cmake, cmake command for release .rar and injector signature verification code (vibes...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 4.0)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
-include(Sign)
 
 SET(V_MAJ0R 1)
 SET(V_MINOR 0)
@@ -16,6 +15,9 @@ if (NOT CMAKE_BUILD_TYPE)
     message(WARNING "Build type not specified. Setting default ('Debug')")
     set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Choose the type of build." FORCE)
 endif ()
+
+include(Sign)
+include(MakeClientRelease)
 
 set(CMAKE_CXX_STANDARD 20)
 set(ARCH "x64")
@@ -34,6 +36,9 @@ FetchContent_MakeAvailable(json)
 
 configure_file("${PROJECT_SOURCE_DIR}/version.hpp.in"
         "${PROJECT_SOURCE_DIR}/version.hpp" @ONLY)
+
+configure_file("${PROJECT_SOURCE_DIR}/version.txt.in"
+        "${PROJECT_SOURCE_DIR}/version.txt" @ONLY)
 
 add_compile_options("$<$<NOT:$<CONFIG:Debug>>:/Zi>")
 add_link_options("$<$<NOT:$<CONFIG:Debug>>:/DEBUG>")
