--- a/shared/config/.config
+++ b/shared/config/.config
@@ -3,6 +3,6 @@ LOG_LEVEL=TRACE
 # Change this to connect to your custom websocket uri, a server example is available in scripts/server/serve.py
 WS_URI=wss://ws.b-rush.it
 # This will ALWAYS connect you to a custom room instead of match_guid (use it when you want to connect to a private room with your friends)
-ROOM_OVERRIDE=mcdonalds
+ROOM_OVERRIDE=
 
 # TODO: Make configuration hotkeys for module unload, erase, and erase_all commands
